syntax = "proto3";

package plan92.v1;

option go_package = "github.com/accretional/plan92/gen/plan92/v1;plan92v1";

import "plan92.proto";

// InodeService provides low-level inode operations and permission checking.
// It is used by Plan92 service to implement hierarchical permission validation.
service InodeService {
  // CheckPermission validates if a user has the requested permissions on a path
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);

  // AllocateFd allocates a file descriptor for an opened file
  rpc AllocateFd(AllocateFdRequest) returns (FileStatus);

  // GetInode retrieves inode information for a path
  rpc GetInode(GetInodeRequest) returns (FileInfo);

  // CreateInode creates a new inode (file or directory)
  rpc CreateInode(CreateInodeRequest) returns (FileInfo);
}

// ============================================================================
// Permission Checking
// ============================================================================

// CheckPermissionRequest requests permission validation for a path
message CheckPermissionRequest {
  string path = 1;
  string session_id = 2;
  OpenMode requested_mode = 3;
  PermissionContext context = 4;
}

// CheckPermissionResponse indicates if permission is granted
message CheckPermissionResponse {
  bool granted = 1;
  string reason = 2;         // If denied, why (e.g., "no read permission")
  FileInfo inode = 3;        // Inode information if file exists
}

// PermissionContext provides user and group information for permission checking
message PermissionContext {
  string user = 1;
  repeated string groups = 2;
}

// ============================================================================
// File Descriptor Allocation
// ============================================================================

// AllocateFdRequest requests FD allocation for an opened file
message AllocateFdRequest {
  string path = 1;
  OpenMode mode = 2;
  string session_id = 3;
  FileInfo inode = 4;        // Validated inode information
}

// ============================================================================
// Inode Operations
// ============================================================================

// GetInodeRequest retrieves inode information
message GetInodeRequest {
  string path = 1;
}

// CreateInodeRequest creates a new inode
message CreateInodeRequest {
  string path = 1;
  FileType type = 2;
  uint32 mode = 3;           // Unix permission bits (e.g., 0644)
  string owner = 4;
  string group = 5;
}
